# demo-renderer

./: .gitignore  Test.Dockerfile  docker-compose.yml  nvx.conf  supervisord.conf
discord-bot/: bot.py  modal.py  pyproject.toml
scripts/: entrypoint.sh  steamcmd.sh  xrandr.sh
scripts/record-test/: pyproject.toml  record_demo.py
